styles/tabs.less
@import "ui-variables";
@tab-radius: 0px;
@modified-icon-width: 8px;
@tab-skew: 30deg;
@tab-top-padding: 0px;
@tab-bottom-border-height: 8px;
@tab-border: 1px solid @tab-border-color;
@tab-bar-bottom-border-color: darken(@base03, 1%);

.tab-bar {
  height: @tab-height + @tab-top-padding + @tab-bottom-border-height;
  background: @tab-bar-background-color;
  box-shadow: inset 0 -8px 8px -4px rgba(0,0,0, .15);
  padding: 0 13px 0 10px;
  box-sizing: border-box;

  &:after {
    content: "";
    position: absolute;
    bottom: 0;
    height: @tab-bottom-border-height;
    left: 0px;
    width: 100%;
    background-color: @tab-background-color-active;
    border-top: 1px solid @tab-border-color;
  }

  .tab {
    position: relative;
    top: @tab-top-padding;
    height: @tab-height;
    line-height: @tab-height;
    color: @text-color;
    padding-left: 0;
    margin-left: 15px;
    border-top-right-radius: @tab-radius;
    box-shadow: inset -1px -1px 1px rgba(0,0,0, .05);
    transition: color .1s ease-in;
    box-shadow: inset -1px 1px 0 @tab-border-color, 4px 0px 4px rgba(0,0,0,.1);
    border: none;

    &, &:before {
      background-image: -webkit-linear-gradient(top, lighten(@tab-bar-background-color, 3%), @tab-bar-background-color);
    }

    &:before {
      content: '';
      position: absolute;
      top: 0;
      left: -18px;
      height: @tab-height;
      width: 40px;
      border-top-left-radius: @tab-radius;
      box-shadow: inset 1px 1px 0 @tab-border-color, -4px 0px 4px rgba(0,0,0,.1);
      border: none;
    }

    .close-icon {
      z-index: 3;
      line-height: @tab-height;
    }
    &.modified:not(:hover) .close-icon {
      top: @tab-height/2 - @modified-icon-width/2 + 1px;
      right: 14px;
      width: @modified-icon-width;
      height: @modified-icon-width;
    }

    .title{
      position: relative;
    }

    &:first-child {
      margin-left: 0px;
    }
  }

  .tab.active {
    z-index: 10;
    line-height: @tab-height - 3px;
    color: @text-color-highlight;
    box-shadow: inset -1px 1px 0 @tab-border-color, 4px -4px 4px rgba(0,0,0,.1);
    border: none;

    .title {
      position: relative;
      top: 1px;
    }

    .close-icon {
      line-height: @tab-height - 1px;
    }

    &, &:before {
      background-image: -webkit-linear-gradient(top, lighten(@tab-background-color-active, 1%), @tab-background-color-active);
      height: @tab-height + 1px;
    }

    &:before {
      border: none;
      box-shadow: inset 1px 1px 0 @tab-border-color, -4px -4px 4px rgba(0,0,0,.1);
    }
  }

  .tab:hover {
    color: @text-color-highlight;
  }

  .tab.active:hover .close-icon {
    color: @text-color-highlight;
  }

  .placeholder {
    height: @tab-height + @tab-top-padding + @tab-bottom-border-height;
    &:after {
      top: @tab-height + @tab-top-padding + @tab-bottom-border-height;
    }
  }
}

